Utter redesign on middleware module's services declaration.